force-app/main/default/objects/Trial_Notification__c/Trial_Notification__c.object-meta.xml
<CustomObject>
    <label>Trial Notification</label>
    <nameField>
        <displayFormat>TN-{0}</displayFormat>
        <label>Trial Notifications Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trial Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>