force-app/main/default/objects/Trial_Notification__c/fields/CTP_Name__c.field-meta.xml
<CustomField>
    <fullName>CTP_Name__c</fullName>
    <label>CTP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>