force-app/main/default/objects/Trial_Notification__c/fields/Need_To_Send_Alert__c.field-meta.xml
<CustomField>
    <fullName>Need_To_Send_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need To Send Alert</label>
    <type>Checkbox</type>
</CustomField>